--- a/src/app/pages/our-story/our-story.component.html
+++ b/src/app/pages/our-story/our-story.component.html
@@ -12,9 +12,9 @@
   <!-- Secțiunea de Conținut cu Textul -->
   <main class="content-section">
     <article class="story-article">
-      <p>
+      <h1>
         <strong>Bun venit la Sanctuarul Spirit Animals!</strong>
-      </p>
+      </h1>
       <p>
         Suntem un sanctuar vegan plin de compasiune, situat în Bucovina,
         România, dedicat oferirii unui
@@ -101,7 +101,7 @@
           <h3>Andreea Balaurea</h3>
           <div class="image-caption">
             Fondator<br /><br />
-            Desigur, iată textul tradus în limba română: Faceți cunoștință cu
+            Faceți cunoștință cu
             Andreea, co-fondatoarea vizionară a Sanctuarului Spirit Animals. O
             adevărată visătoare, cu o compasiune infinită pentru toate ființele
             vii. Misiunea ei este de a crea o lume în care fiecare ființă merită
