--- a/src/app/sections/about-us/about-us.component.html
+++ b/src/app/sections/about-us/about-us.component.html
@@ -1,16 +1,16 @@
 <section class="about-us-section">
   <div class="about-us-header">
-    <h2>About us</h2>
+    <h2>Despre noi</h2>
   </div>
   <div class="about-us-content">
     <div class="about-us-top-container">
       <div class="about-us-text-1">
         <h3>
-          We are a compassionate vegan sanctuary located in Bucovina, Romania,
-          dedicated to providing a safe haven for animals who have been rescued
-          from the horrors of slaughter. At our sanctuary, these beautiful souls
-          find solace, freedom, and a life filled with love, happiness, peace,
-          and equality.
+          Suntem un sanctuar vegan plin de compasiune, situat în Bucovina,
+          România, dedicat oferirii unui refugiu sigur pentru animalele care au
+          fost salvate de la ororile abatorului. La sanctuarul nostru, aceste
+          suflete frumoase găsesc alinare, libertate și o viață plină de iubire,
+          fericire, pace și egalitate.
         </h3>
       </div>
       <div class="about-us-image">
@@ -26,21 +26,22 @@
     <div class="about-us-bottom-container">
       <div class="about-us-text-2">
         <p>
-          Our mission is rooted in the belief that all sentient beings deserve
-          to be treated with kindness, respect, and empathy. We firmly reject
-          the notion that animals are mere commodities for human consumption.
-          Instead, we strive to create a world where every individual—human and
-          non-human alike—can coexist harmoniously.
+          Misiunea noastră este înrădăcinată în convingerea că toate ființele
+          simțitoare merită să fie tratate cu bunătate, respect și empatie.
+          Respingem cu fermitate noțiunea că animalele sunt simple mărfuri
+          pentru consumul uman. În schimb, ne străduim să creăm o lume în care
+          fiecare individ – uman și non-uman deopotrivă – poate coexista în
+          armonie.
         </p>
       </div>
       <div class="about-us-text-3">
         <p>
-          At Spirit Animals Sanctuary, we go beyond the traditional approach of
-          rescue and rehabilitation. We recognize that animals are not property,
-          but individuals with their own unique personalities, emotions, and
-          desires. With this understanding, we provide them with the freedom to
-          express their innate behaviors, allowing them to flourish in an
-          environment that respects their natural instincts.
+          La Sanctuarul Spirit Animals, mergem dincolo de abordarea tradițională
+          de salvare și reabilitare. Recunoaștem că animalele nu sunt o
+          proprietate, ci indivizi cu personalități, emoții și dorințe unice.
+          Înțelegând acest lucru, le oferim libertatea de a-și exprima
+          comportamentele înnăscute, permițându-le să înflorească într-un mediu
+          care le respectă instinctele naturale.
         </p>
       </div>
     </div>
