--- a/src/app/sections/donate-section/donate-section.component.html
+++ b/src/app/sections/donate-section/donate-section.component.html
@@ -9,7 +9,7 @@
           height="78"
           class="donate-icon"
       /></a>
-      <a routerLink="/donate" class="donate-link">Donate</a>
+      <a routerLink="/donate" class="donate-link">Doneaza</a>
     </div>
     <div class="patreon-container">
       <a href="https://www.patreon.com/SpiritAnimalsSanctuary"
@@ -23,7 +23,7 @@
       <a
         href="https://www.patreon.com/SpiritAnimalsSanctuary"
         class="patreon-link"
-        >Become a Patron</a
+        >Doneaza Prin Patreon</a
       >
     </div>
   </div>
