--- a/src/app/sections/our-impact/our-impact.component.html
+++ b/src/app/sections/our-impact/our-impact.component.html
@@ -1,16 +1,16 @@
 <section class="our-impact-wrapper">
   <section class="our-impact-section">
     <div class="our-impact-header">
-      <h2>Our Impact</h2>
+      <h2>Impactul Nostru</h2>
       <p>
-        With 90 happy souls finding solace within our sanctuary and a vibrant
-        community of +11,000 people supporting our cause, the impact of our
-        sanctuary reaches far and wide. Through the power of compassion, our
-        sanctuary provides a loving home for animals in need and nurtures a
-        community that values empathy, connection, and environmental
-        stewardship. Together, we strive to create a world where animals are
-        respected, cherished, and protected, impacting the hearts and minds of
-        all who enter our sanctuary.
+        Cu 90 de suflete fericite care își găsesc alinarea în sanctuarul nostru
+        și o comunitate vibrantă de peste 11.000 de oameni care ne susțin cauza,
+        impactul sanctuarului nostru ajunge departe. Prin puterea compasiunii,
+        sanctuarul nostru oferă un cămin iubitor animalelor aflate la nevoie și
+        cultivă o comunitate care prețuiește empatia, conexiunea și
+        responsabilitatea față de mediu. Împreună, ne străduim să creăm o lume
+        în care animalele sunt respectate, prețuite și protejate, având un
+        impact asupra inimilor și minților tuturor celor care ne trec pragul.
       </p>
     </div>
 
@@ -26,7 +26,7 @@
           />
         </a>
         <a routerLink="/animals">
-          <p>+90 joyful souls call it home</p>
+          <p>+90 de suflete vesele îi spun "acasă".</p>
         </a>
       </div>
       <div class="impact-item-bottom">
@@ -37,7 +37,7 @@
           width="100"
           height="100"
         />
-        <p>A community of +11,000 people support our cause</p>
+        <p>O comunitate de peste 11.000 de oameni ne susține cauza.</p>
       </div>
     </div>
   </section>
