--- a/src/app/sections/visit-us/visit-us.component.html
+++ b/src/app/sections/visit-us/visit-us.component.html
@@ -1,12 +1,12 @@
 <section class="visit-us-section">
   <div class="visit-us-content">
-    <h2 class="visit-us-title">Would you like to visit us?</h2>
+    <h2 class="visit-us-title">Doresti sa ne vizitezi?</h2>
     <p class="visit-us-description">
-      It’s not the easiest ride (unless you have a 4×4), as we’re on the top of
-      the mountain. But if you come to Fundu Moldovei, just contact us and we’d
-      be happy to come and take you from there. We’re always happy to have
-      visitors and we can’t wait to show you our haven. Free of charge, of
-      course!
+      Drumul până la noi nu este cel mai ușor (decât dacă aveți un 4x4),
+      deoarece ne aflăm în vârful muntelui. Însă, dacă ajungeți în Fundu
+      Moldovei, este de ajuns să ne contactați și vom fi bucuroși să venim să vă
+      preluăm de acolo. Ne bucurăm mereu să avem vizitatori și abia așteptăm să
+      vă arătăm refugiul nostru. Gratuit, desigur!
     </p>
   </div>
 </section>
