--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -87,19 +87,19 @@
           </ul>
         </div>
         <div class="links-column menu">
-          <h3>MENU</h3>
+          <h3>MENIU</h3>
           <ul>
-            <li><a routerLink="/">Home</a></li>
-            <li><a routerLink="/our-story">Our Story</a></li>
-            <li><a routerLink="/animals">Animals</a></li>
-            <li><a routerLink="/adopt">Adopt</a></li>
-            <li><a routerLink="/donate">Donate</a></li>
-            <li><a routerLink="/volunteer">Volunteer</a></li>
+            <li><a routerLink="/">Acasa</a></li>
+            <li><a routerLink="/our-story">Povestea</a></li>
+            <li><a routerLink="/animals">Rezidentii</a></li>
+            <li><a routerLink="/adopt">Adopta</a></li>
+            <li><a routerLink="/donate">Doneaza</a></li>
+            <li><a routerLink="/volunteer">Voluntariat</a></li>
             <li><a routerLink="/contact">Contact</a></li>
           </ul>
         </div>
         <div class="links-column how-to-find-us">
-          <h3>HOW TO FIND US</h3>
+          <h3>Cum ne gasiti?</h3>
           <p>
             Fundu Moldovei, Suceva, <br />
             Romania
@@ -109,9 +109,9 @@
       </div>
     </div>
     <div class="terms-and-privacy">
-      <a routerLink="/terms-and-conditions">Terms and Conditions</a>
+      <a routerLink="/terms-and-conditions">Termenii si Conditiile</a>
       <span class="separator"> | </span>
-      <a routerLink="/privacy">Privacy Policy</a>
+      <a routerLink="/privacy">Politica de Confidențialitate</a>
     </div>
     <div class="copyright-container">&copy; 2025 Spirit Animals Sanctuary</div>
   </div>
