--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -8,6 +8,22 @@
   z-index: 1; /* Ensure it stays above other content */
 }
 
+.main-toolbar {
+  /* Adaugă un fundal semi-transparent pentru a asigura contrastul */
+  background-color: rgba(20, 25, 35, 0.21);
+  backdrop-filter: blur(26px); /* Efect de "sticlă mată" modern */
+  -webkit-backdrop-filter: blur(8px);
+  position: sticky;
+  top: 0;
+  z-index: 1000; /* Asigură că stă deasupra oricărui alt conținut */
+  height: 80px;
+}
+
+.mat-mdc-button {
+  color: white; 
+  font-weight: bold;
+}
+
 .title {
   margin-left: 0.5rem;
   font-weight: bold;
@@ -32,7 +48,9 @@
 }
 
 .logo {
-  margin-top: 50px;
+  /* margin-top: 50px; */
+  height: 80px; /* Adjusted for better visibility */
+  width: auto; /* Maintain aspect ratio */
 }
 
 @media (max-width: 800px) {
