--- a/src/app/sections/volunteer-section/volunteer-section.component.html
+++ b/src/app/sections/volunteer-section/volunteer-section.component.html
@@ -1,14 +1,16 @@
 <section class="volunteer-section">
   <div class="volunteer-section-content">
-    <h2>Become a volunteer</h2>
+    <h2>Devino voluntar</h2>
     <p>
-      Join our dedicated team in providing a safe haven for 90 remarkable animal
-      souls. Experience the joy of nurturing and caring for these beautiful
-      beings, witnessing their healing and happiness firsthand. As a volunteer,
-      you’ll foster connections with fellow animal lovers and contribute to a
-      thriving community of kindness. Together, we can make a profound impact on
-      the lives of our animal residents while fostering personal growth and a
-      deeper appreciation for the remarkable bond between humans and animals.
+      Alătură-te echipei noastre dedicate pentru a oferi un refugiu sigur celor
+      90 de suflete remarcabile de animale. Experimentează bucuria de a hrăni și
+      de a îngriji aceste ființe minunate, fiind martor direct la vindecarea și
+      fericirea lor. Ca voluntar, vei lega conexiuni cu alți iubitori de animale
+      și vei contribui la o comunitate prosperă, plină de bunătate. Împreună,
+      putem avea un impact profund asupra vieților rezidenților noștri
+      necuvântători, încurajând în același timp dezvoltarea personală și o
+      apreciere mai profundă pentru legătura remarcabilă dintre oameni și
+      animale.
     </p>
     <div class="gallery-section">
       <div class="gallery-grid">
@@ -23,7 +25,11 @@
         />
       </div>
 
-      <div class="lightbox" *ngIf="lightboxOpen" (click)="onBackdropClick($event)">
+      <div
+        class="lightbox"
+        *ngIf="lightboxOpen"
+        (click)="onBackdropClick($event)"
+      >
         <div class="lightbox-content" #lightboxContent>
           <span class="close" (click)="closeLightbox()">&times;</span>
           <a class="prev" (click)="prevImage()">❮</a>
@@ -41,6 +47,6 @@
         </div>
       </div>
     </div>
-    <a routerLink="/volunteer" class="volunteer-link">Find more</a>
+    <a routerLink="/volunteer" class="volunteer-link">Afla mai multe</a>
   </div>
 </section>
